css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@import url('default-pallete.css');

:root {
  --darkgray: rgba(20, 20, 25);
  --white: rgb(250, 240, 255);
  --white: var(--cream);
  
  --head-1: 10rem;
  --head-2: 8rem;
  --head-3: 5rem;
  --head-4: 4rem;
  --head-5: 3.5rem;
  --head-6: 3rem;
  --par: 4rem;

  --btn-padding-h: calc(.6rem + .2em);
  --btn-padding-v: calc(2rem + .2em);
  --border-r: 2.5rem;
  --footer-h: 10rem;

  --bg-dark: var(--darkgray);
  --bg-light: var(--white);

  --bg: var(--bg-dark);
  --non-bg: var(--white);
  --decoration: unset;

  --text-color: var(--non-bg);

  --button-bg: var(--white);
  --accent-color: var(--darkgray);

  --danger: var(--red);
  --positive: var(--green);

  --font-clr: var(--white);
  --text-secondary: var(--darkgray);

  --role-color: var(--red);
  --visited: var(--orange);
  overflow-y: scroll;
  scrollbar-color: var(--cream) var(--bg);
  scrollbar-width: thin;

  --min-width: 3em;
}

body {
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
  background-color: var(--bg);
  height: auto;
  max-width: 100%;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  margin: none;
  padding: 3em;
}

a {
  text-decoration: none;
  margin: 0;
  padding: 0;
}

ul {
  list-style-type: none;
}


.danger {
  --accent-color: var(--danger);
  color: var(--accent-color)
}

.positive {
  --accent-color: var(--positive);
  color: var(--accent-color);
}


.normal {
  --accent-color: var(--purple);
  --accent-color-2: var(--cream);
}

.ui {
  border-radius: var(--border-r);
}

*:where(h1, h2, h3, h4, h5, h6, p, span, ul, li){
  display: inline;
  margin: 0 auto;
  line-height: 1.6;
  margin-top: 0;
  margin: none;
  color: var(--non-bg);
}

.ui *:where(h1, h2, h3, h4, h5, h6, a, p, span, ul, li){
  --accent-color: inherit;
  --accent-color-2: inherit;
  color: var(--btn-t-color);
  text-decoration: var(--decoration) underline;
}

input.ui, select.ui {
  background-color: var(--cream);
  font-size: var(--par);
  padding: .5em;
}

select.ui {
  width: auto;
}

input.ui {
  padding-left: 2em;
  outline: none;
}

input::placeholder {
  color: var(--byzantium);
}

select {
  outline: none;
  appearance: none;
  background-image: none;
}

input.ui::before {
  color: var(--yellow);
  content: 'T';
}


.sidebar {
  position: fixed;
  top: 0;
  left: 0;
  background-color: #fff;
  height: 100vh;
  width: 3em;
}
.footer h4 {
  grid-area: h;
  display: block;
}

epilogue {
  padding-top: 4em;
  padding-bottom: 4em;
  grid-area: e;
  justify-self: center;
}

epilogue h4 {
  display: inline-block;
}

.footer-divider {
  grid-area: d;
}

.footer li {
  display: block;
  font-size: var(--head-5);
}

.footer, footer ul {
  grid-area: l;
}


.footer, footer {
  background: var(--bg);
  width: 100%;
  margin-top: auto;
  padding-top: calc(var(--head-2) * 2);
  padding-bottom: calc(var(--head-2) * 2);
  display: grid;
  height: var(--footer-h);
  grid-template-columns: auto, 200px, auto;
  grid-template-rows: repeat(3, auto);
  grid-template-areas: "h h h"
                       "l l l"
                       "e e e";
}

.element-container {
  display: flex;
  flex-wrap: wrap;
  gap: 6em;
  align-items: center;
  justify-items: center;
}

.footer-container {
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: 5fr 1fr 5fr;
  color: var(--text-color);
  padding: 1rem;
  box-sizing: border-box;
}

@keyframes wbicie {
  0% {
    transform: translateY(100%);
    opacity: 0;
  }
  100% {
    transform: translateY(0%);
    opacity: 1;
  }
}

*:where(.ui) {
  padding: .7rem;
  background: none;
  border: 1px solid black;
  box-sizing: border-box;
  border-radius: var(--border-r);
  padding: 1rem 1.4em;
  text-decoration: none;
  padding: var(--btn-padding-h) var(--btn-padding-v);
  background-color: var(--white); 
  color: var(--text-secondary);
  border: none;
  border-radius: var(--border-r);
  box-shadow: 0px .3em 0px var(--accent-color),
              0px .2em 16px var(--non-bg);
  width: fit-content;
  margin-bottom: clamp(calc(3rem + 3em), calc(3rem + 2em), 10em);
  margin-left: calc(.1rem + 1em);

  justify-self: center;
}

.container {
  color: var(--text-color);
  padding: 1rem;
  /* width: calc(100% - 3rem); */
  box-sizing: border-box;
  /* margin-left: 3em; */
}


a > * {
  margin-bottom: 0;
  text-align: center;
}

h1 {
  --accent-color: var(--byzantium);
  --accent-color-2: var(--l-blue);
  text-align: center;
  font-size: var(--head-1);
  width: clamp(100%, 70vw, 10* var(--head-1));
  display: inline-block;
}

/* h1::after {
  display: inline-block;
  content: "";
  position: relative;
  top: -.8em;
  left: 0;
  width: 100%;
  transform: perspective(20px) rotateX(3deg);
  filter: blur(16px);
  height: var(--head-2);
  background-color: currentColor;
}
*/

h1:hover {
  text-shadow: 0 0 32px var(--byzantium);
}

h2 {
  font-size: var(--head-2);
}

h3 {
  font-size: var(--head-3);
}

h4 {
  font-size: var(--head-4);
}

h5 {
  font-size: var(--head-5);
}

h6 {
  font-size: var(--head-6);
}

p {
  font-size: var(--par);
}

a.ui , button.ui {
  /*
  --btn-padding-h: .4em;
  --btn-padding-v: .8em;

  --border-r: 1em;
  */

  box-sizing: border-box;
  font-size: var(--head-3);
}

a:not(.ui)visited {
  color: var(--visited);
}

button:not([disabled]).ui {
  cursor: pointer;
}
button[disabled].ui, a[disabled].ui {
  color: var(--not-bg);
  cursor: not-allowed;
  opacity: 50%;
}

a.ui, button.ui > * {
  margin-bottom: auto;
}

.ui:where(:not(.secondary)) {
  color: var(--btn-t-color);
}

button h4:empty:after {
  content: 'guzik...';
  color: var(--cream);
}

a.ui:not([disabled]):active, button:not([disabled]):active {
  transition: 100ms ease;
  box-shadow: 0px .2em 0px var(--accent-color),
              0px .2em 16px var(--accent-color);
  transform: translateY(.2em);
}
/* ... */

